Fix IntelliJ warnings.